--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
+
 wrap {
     width:1000px;
     margin:auto;
 }
-
-
 header {
     height:100px;
     background-color: #188CC2;
@@ -14,7 +13,7 @@ header {
     padding: 40px 30px;
 }
 
+contents{min-height: 500px;}
 
-footer {
-    height:80px;
-}
+
+footer{height: 100px;}
